<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:paddingVertical="@dimen/margin_between_views">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvReadyToScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready_to_scan"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/title_text_size"
        android:layout_marginTop="@dimen/margin_top_read_to_scan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivNFCIcon"
        android:layout_width="@dimen/home_ui_center_icon_width"
        android:layout_height="@dimen/home_ui_center_icon_height"
        android:src="@drawable/nfc_scan_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReadyToScan"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHoldCardForScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hold_card_message"
        android:textColor="@color/colorBlack"
        android:gravity="center_horizontal"
        android:paddingHorizontal="@dimen/description_horizontal_margin"
        android:textSize="@dimen/description_text_size"
        app:layout_constraintTop_toBottomOf="@+id/ivNFCIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_button"
        android:textSize="@dimen/button_text_size"
        android:layout_marginVertical="@dimen/margin_between_views"
        app:layout_constraintTop_toBottomOf="@+id/tvHoldCardForScan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>